--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@dikac/t-array",
-  "version": "0.26.0-alpha.1",
+  "version": "0.26.0-alpha.2",
   "description": "Typescript array",
   "dependencies": {
-    "@dikac/t-boolean": "^0.11.0-beta.1",
-    "@dikac/t-function": "^0.15.0-beta.5",
-    "@dikac/t-iterable": "^0.4.4",
-    "@dikac/t-message": "^0.11.3",
-    "@dikac/t-object": "^0.37.0-alpha.1",
+    "@dikac/t-boolean": "^0.11.0-beta.2",
+    "@dikac/t-function": "^0.15.0-beta.6",
+    "@dikac/t-iterable": "^0.5.0-alpha.0",
+    "@dikac/t-message": "^0.12.0-alpha.1",
+    "@dikac/t-object": "^0.37.0-alpha.2",
     "@dikac/t-string": "^0.16.0-alpha.1",
     "@dikac/t-validatable": "^0.20.0-beta.4",
-    "@dikac/t-validator": "^0.19.0-beta.12",
-    "@dikac/t-value": "^0.14.6",
+    "@dikac/t-validator": "^0.19.0-beta.15",
+    "@dikac/t-value": "^0.15.0-beta.0",
     "ts-toolbelt": "^9.6.0",
     "utility-types": "^3.10.0"
   },
