--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@alirya/function": "0.15.0",
     "@alirya/iterable": "0.5.0",
     "@alirya/message": "0.12.0",
-    "@alirya/object": "0.37.0",
-    "@alirya/string": "0.16.0",
+    "@alirya/object": "0.37.1",
+    "@alirya/string": "0.16.1",
     "@alirya/validatable": "0.20.0",
-    "@alirya/validator": "0.19.0",
+    "@alirya/validator": "0.19.1",
     "@alirya/value": "0.15.0",
     "ts-toolbelt": "^9.6.0",
     "utility-types": "^3.10.0"
@@ -32,8 +32,9 @@
     "tsc-fancy": "^1.1.2",
     "ts-toolbelt": "^9.6.0",
     "utility-types": "^3.10.0",
-    "@alirya/type": "0.7.0",
-    "@alirya/class": "0.3.0"
+    "package-version-git-tag": "^3.0.0",
+    "@alirya/type": "0.7.1",
+    "@alirya/class": "0.3.1"
   },
   "scripts": {
     "spec-run-js": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
@@ -55,6 +56,8 @@
     "lint": "tslint --project ./tslint.json",
     "lint-fix": "tslint --project ./tslint.json --fix",
     "doc-generate": "npm-run-all _doc-clean _doc-generate",
+    "git-tag": "package-version-git-tag",
+    "git-tag-push": "package-version-git-tag --push",
     "_compile-script": "tsc-fancy --preserveConsoleOutput",
     "_spec-ensure-directory": "mkdirp dist-spec",
     "_compile-script-watch": "tsc-fancy --preserveConsoleOutput -w",
