--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.26.0",
   "description": "Typescript array",
   "dependencies": {
+    "tslib": "^2.3.1",
     "@alirya/boolean": "0.11.0",
     "@alirya/function": "0.15.0",
     "@alirya/iterable": "0.5.0",
