--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "utility-types": "^3.10.0",
     "package-version-git-tag": "^3.0.0",
     "@alirya/type": "^0.7.1",
-    "@alirya/class": "^0.3.3"
+    "@alirya/class": "^0.3.3",
+    "cpx": "^1.5.0"
   },
   "scripts": {
     "spec-run-js": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
