--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "type": "git",
     "url": "https://github.com/alirya/array"
   },
-  "type": "module",
   "dependencies": {
     "@alirya/boolean": "^0.12.0",
     "@alirya/function": "^0.17.0",
@@ -51,14 +50,14 @@
     "ts-cleaner": "^1.0.5",
     "ts-toolbelt": "^9.6.0",
     "tsc-fancy": "^1.1.2",
-    "tslint": "^6.1.3",
+    "tslint": "^5.13.0",
     "typedoc": "^0.22.10",
-    "typescript": "^4.7.4",
+    "typescript": "^4.5.2",
     "utility-types": "^3.10.0"
   },
   "scripts": {
     "spec-run-js": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
-    "spec-run": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
+    "spec-run": "jasmine --config=./jasmine.json",
     "spec-runs": "jasmine --config=./jasmine.json --reporter=jasmine-ts-console-reporter",
     "spec-runss": "jasmine --config=./jasmine.json",
     "spec-run-debug": "node -r esm node_modules/jasmine/bin/jasmine.js --config=./jasmine-debug.json --reporter=jasmine-ts-console-reporter",
@@ -91,5 +90,6 @@
     "_compile-asset": "cpx \"./{package.json,package-lock.json,LICENSE,Readme.md,.npmignore}\" ./dist/ --verbose",
     "_compile-asset-watch": "cpx \"./{package.json,package-lock.json,LICENSE,README.md,.npmignore}\" ./dist/ --verbose --watch",
     "prerelease": "npm-run-all _release-remove-compile-cache compile"
-  }
+  },
+  "type": "module"
 }
